syntax = "proto3";

package subscriptions;

option go_package = "proto;subscriptions";

service Subscriptions {
	// Create a subscription to the "M3O Platform" plan
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Cancel(CancelRequest) returns (CancelResponse) {}
	// Soon to be deprecated and replaced with Update calls
	rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
	// Create or update subscriptions like "M3O Addition Users"
	// or "M3O Additional Services"
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
}

message CreateRequest {
	string customerID = 1;
	string type = 2;
	string paymentMethodID = 3;
}

message CreateResponse {
	Subscription subscription = 1;
}

message Subscription {
	string id = 1;
	string customerID = 2;
	string type = 3;
	int64 created = 4;
	int64 expires = 5; // blank unless the customer has cancelled their subscription
}

message CancelRequest {
	string customerID = 1;
	string subscriptionID = 2;
}

message CancelResponse {
	Subscription subscription = 1;
}

message AddUserRequest{
	string ownerID = 1;
	string newUserID = 2;
}

message AddUserResponse {
}

message UpdateRequest {
	string priceID = 1;
	int64 quantity = 2;
	string ownerID = 3;
}

message UpdateResponse {
}
